# MinUnitTestHDK

./: Cargo.toml  README.md  run-test.sh
dna_help/: Cargo.toml
dna_help/src/: lib.rs
zome/: Cargo.toml
zome/src/: fixtures.rs  lib.rs  validate_helpers.rs
zome/src/goal/: crud.rs  validate.rs
zome/src/goal_comment/: crud.rs  validate.rs
