[package]
name = "dna_help"
version = "0.1.0"
authors = ["Connor Turland <connor@sprillow.com>"]
edition = "2018"

[dependencies]
#hdk = "0.0.100"
hdk = { git = "https://github.com/holochain/holochain", rev = "bdb9c55d504135df39ccb1c75896557a788d0ac0" }
paste = "*"
# use whatever serde hdk uses
serde = "*"
thiserror = "1"
mockall = "0.9"

[dev-dependencies]
fixt = { git = "https://github.com/holochain/holochain", rev = "bdb9c55d504135df39ccb1c75896557a788d0ac0" }
holochain_types = { git = "https://github.com/holochain/holochain", rev = "bdb9c55d504135df39ccb1c75896557a788d0ac0" }
rand = "0.7"
strum = "0.18.0"
strum_macros = "0.18.0"

[features]
mock = ["hdk/mock", "hdk/test_utils"]

